# easydiffvg

./: CLAUDE.md  README.md  pyproject.toml
.claude/: settings.json
.serena/: project.yml
benchmarks/: bench_splat_experiments.py  bench_splat_speed.py  bench_splat_tiling.py
docs/: tile-culling-design-note.md  triton-tile-kernel-design-note.md
docs/plans/: 2025-01-24-pydiffvg-drop-in-design.md  2026-01-24-pure-pytorch-implementation.md  2026-01-24-pure-pytorch-rewrite-design.md  2026-01-24-test-suite-design.md  2026-07-06-triton-tile-kernel-plan.md
pydiffvg/: __init__.py  bvh.py  color.py  device.py  gradients.py  groups.py  image.py  optimize_svg.py  rasterize.py  render.py  render_diff.py  shapes.py  splat_render.py  splat_triton.py
pydiffvg/svg/: __init__.py  parse.py  save.py
pydiffvg/utils/: __init__.py  bezier.py  distance.py  winding.py
src/easydiffvg/: __init__.py  bvh.py  color.py  gradients.py  groups.py  rasterize.py  render.py  render_diff.py  shapes.py
src/easydiffvg/svg/: __init__.py  parse.py  save.py
src/easydiffvg/utils/: __init__.py  bezier.py  distance.py  winding.py
tests/: __init__.py  conftest.py  test_bezier.py  test_colors.py  test_gradients.py  test_groups.py  test_integration.py  test_render.py  test_render_diff.py  test_shapes.py  test_splat_render.py  test_splat_render_compile.py  test_splat_render_speed.py  test_splat_render_tiling.py  test_splat_triton.py  test_svg.py  test_utils.py
