[project]
name = "easydiffvg"
version = "0.1.0"
description = "Pure PyTorch differentiable vector graphics - drop-in replacement for diffvg"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "cssutils>=2.11.1",
    "matplotlib>=3.10.8",
    "pillow>=12.1.0",
    "scikit-image>=0.26.0",
    "svgpathtools>=1.7.2",
    "torch>=2.10.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["pydiffvg"]

[tool.uv]
dev-dependencies = [
    "cmake>=4.2.1",
    "pytest>=9.0.2",
]
